# DAS

./: .gitignore  Makefile  NOTES  README.md  README.rst  TODO  clean_cmake  makeinclude
code/: Makefile
code/DAQ/: DAQ.pro  UI_mainwindow.ui  WC_mainwindow.cpp  WC_mainwindow.h  main.cpp
code/app/: Makefile  mainwindow.cpp  mainwindow.h  mainwindow.ui  text-document-integration
code/stl/: algorithm  array  cmath  deque  enum  inet  memory  new  pgmspace  tuple  utility  vector
code/sys/: Makefile
code/utils/: Makefile
documents/: type_k.cal
driver/: NOTES  makeinclude
driver/resources/: 99-libftdi.rules
driver/test/: Makefile  makeinclude  test.cxx
final_results/: convert.py  createFit_exp.m  createfigure_2.m  creategraph_.m  exp_fit.sfit  exp_fit2.sfit  filter.m  graph_.eps  graph_.m  graph_.m~  noise_floor.py  result23_20_20161104.csv  temp.csv  temp.txt  untitled2.m
final_results/html/: creategraph_.html
firmware/adc_new/: adc_new.ino
hardware/: NOTES  TODO  clean_cmake
hardware/schematics/: 1-power.sch  1-power.sch~  2-mcu.sch  3-adc.cmd  3-adc.net  3-adc.pcb  (+7 more)
schematics/: 1-power.sch  2-mcu.sch  3-adc.sch  MCU.sch
software/: .gitignore  clean_cmake
software/code/test/: CMakeCache.txt  CMakeLists.txt  busybox  busybox.cxx  cmake_install.cmake  out  plot
test/: makeinclude  test  test.cxx
test_results/: .temp.swp  V5SuppRef  V5SuppRef2  average.py  averaged  lm35  lm35_adc  temp  temperature  test.py  test1_3_11_16
thermocuople/: Thermocouple tables - IEC584 _ TMH.xls  calib.csv  calibration.m  calibration.m~  typeK_calibration.csv
(+83 files in other folders)
